# Copyright (C) 2019 THL A29 Limited, a Tencent company. All rights reserved.
#
# Licensed under the BSD 3-Clause License (the "License"); you may not use this
# file except in compliance with the License. You may obtain a copy of the
# License at
#
# https://opensource.org/licenses/BSD-3-Clause
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

cc_library(
    name = "init",
    srcs = ["init.cc"],
    hdrs = ["init.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//flare/base:buffer",
        "//flare/base:function",
        "//flare/base:monitoring",
        "//flare/base:option",
        "//flare/base:random",
        "//flare/base/internal:background_task_host",
        "//flare/base/internal:dpc",
        "//flare/base/internal:time_keeper",
        "//flare/base/monitoring:init",
        "//flare/base/thread:latch",
        "//flare/fiber",
        "//flare/init:on_init",
        "//flare/init:openssl_initializer",
        "//flare/init:override_flag",
        "//flare/io:io_basic",
        "//flare/net/http:http_client",
        "//flare/net/internal:http_engine",
        "//flare/rpc/binlog",
        "//flare/rpc/internal:stream_call_gate_pool",
        "@com_github_gflags_gflags//:gflags",
        "@com_github_google_glog//:glog",
    ],
)
